--- a/css/all.css
+++ b/css/all.css
@@ -199,11 +199,10 @@ nav ul li a {
 
 
 .main-title {
-    font-size: 3rem;
-    letter-spacing: 10px;
+    font-size: 2.5rem;
+    letter-spacing: 0.7rem;
   
 }
-
 
 
 
